完成积分记录页面顶部统计显示，修复记录时间不能正常显示的问题